remove projectile (moving to project.el)

--- a/emacs.org
+++ b/emacs.org
@@ -236,7 +236,7 @@ For the icons to display correctly, I needed to =all-of-the-icons-install-fonts=
                             ))
     (setq dashboard-set-heading-icons t)
     (setq dashboard-set-file-icons t)
-    (setq dashboard-projects-backend 'projectile)
+    (setq dashboard-projects-backend 'project-el)
 
     (dashboard-modify-heading-icons '((recents . "file-text")))
 
@@ -422,7 +422,7 @@ Auto-creates closing parenthesis and bar and, smartly, writes it over if it is t
 ** Projectile
 Allows me to set project-wide commands and variables. [[https://docs.projectile.mx/projectile/index.html][Projectile Documentation]]
 Notably: run, debug, project-variables, grep (and rg).
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :tangle no
   (use-package projectile
     :after lsp
     ;; :delight projectile-mode
@@ -693,7 +693,6 @@ After changing venv all installed packages from venv should be visible for LSP s
     (variable-pitch-mode 1)
     (visual-line-mode 1)
     (rainbow-delimiters-mode 0)
-    (projectile-mode -1)
     ;; (company-mode 1)
     ;; edit the modeline-- not needed for doom-modeline
     ;; (diminish 'visual-line-mode)
