increase default text size and add back some general setup

--- a/emacs.org
+++ b/emacs.org
@@ -115,6 +115,253 @@ To ensure scrolling is fast in Emacs, disable  non-essential things while the wi
   (fast-scroll-mode 1))
 #+end_src
 
+*** Better undo
+    - =C-x u= visualizes undo history as a tree for easy navigation
+    - =C-_= undo
+    - =M-_= redo
+#+begin_src emacs-lisp
+  (use-package undo-tree
+    :defer 2
+    :config
+    (global-undo-tree-mode 1))
+#+end_src
+
+*** Backup files
+Save backups in =.emacs.d=.
+#+begin_src emacs-lisp
+  (setq backup-directory-alist
+        '( ("." . "~/.dotfiles/.emacs.d/filebackups")))
+#+end_src
+
+*** Line numbers
+#+begin_src emacs-lisp
+     (dolist (mode '(org-mode-hook
+                     term-mode-hook
+                     shell-mode-hook
+                     treemacs-mode-hook
+                     eshell-mode-hook
+                     vterm-mode-hook))
+       (add-hook mode (lambda () (display-line-numbers-mode 0))))
+
+    ;; (global-display-line-numbers-mode t)     ; Puts line numbers on ALL buffers
+#+end_src
+
+*** Theme
+#+begin_src emacs-lisp
+  ;; (use-package monokai-theme
+  ;;     :init (load-theme 'monokai t))
+ ;; Saving my SECOND favorite theme which is easier on the eyes.
+ (use-package gruvbox-theme
+     :init (load-theme 'gruvbox-dark-hard t))
+#+end_src
+
+*** Modeline 
+**** Doom-modeline
+*NOTE*: The first time you load your configuration on a new machine, you’ll need to run =M-x all-the-icons-install-fonts= so that mode line icons display correctly. (Fixed?)
+#+begin_src emacs-lisp  
+  (use-package all-the-icons
+  :init
+  (when (and (not (member "all-the-icons" (font-family-list))) ;; autoinstall fonts
+             (window-system))
+    (all-the-icons-install-fonts t)))
+
+  (use-package doom-modeline
+    :init (doom-modeline-mode 1)
+    :custom ((doom-modeline-height 15)))
+#+end_src
+
+*** Transparency
+#+begin_src emacs-lisp
+   (defun transparency (value)
+     "Sets the transparency of the frame window. 0=transparent/100=opaque"
+     (interactive "nTransparency Value 0 - 100 opaque:")
+     (set-frame-parameter (selected-frame) 'alpha value))
+
+  (transparency 96)  ;; Default value generally e [94,96]
+#+end_src
+
+*** Auto-clean white space
+#+begin_src emacs-lisp
+(use-package ws-butler
+  :hook ((text-mode . ws-butler-mode)
+         (prog-mode . ws-butler-mode)))
+#+end_src
+
+*** Make  =yes or no= prompts shorter
+#+begin_src emacs-lisp
+(defalias 'yes-or-no-p 'y-or-n-p)
+#+end_src
+
+*** TODO buffers
+Present a list of currently open buffers when you split the window.
+#+begin_src emacs-lisp  :tangle no
+(defadvice! (switch-to-buffer)
+  :after 'window-split (switch-to-buffer))
+#+end_src
+
+*** Dashboard
+Dash board for initial startup of emacs. [[https://github.com/emacs-dashboard/emacs-dashboard][github link]]
+- For the icons to display correctly, I needed  to execute =all-of-the-icons-install-fonts=.
+
+#+begin_src emacs-lisp
+  (recentf-mode 1) ;; needed for recent files in dashboard
+
+  (use-package dashboard
+    :ensure t
+    :config
+    (dashboard-setup-startup-hook)
+    (setq dashboard-center-content 1)
+    (setq dashboard-show-shortcuts nil)
+    (setq dashboard-items '((recents  . 7)
+                            ;; (bookmarks . 5)
+                            (projects . 5)
+                            (agenda . 5)
+                            ;; (registers . 5)
+                            ))
+    (setq dashboard-set-heading-icons t)
+    (setq dashboard-set-file-icons t)
+    (setq dashboard-projects-backend 'project-el)
+
+    (dashboard-modify-heading-icons '((recents . "file-text")))
+
+    (setq dashboard-set-footer nil)
+    )
+#+end_src
+
+** Native Compilation
+*** Suppress compilation warnings
+#+begin_src emacs-lisp
+  (setq native-comp-async-report-warnings-errors nil)
+#+end_src
+
+** Goto last change
+Sometimes it's useful to step to the last change in a buffer.
+#+begin_src emacs-lisp
+  (use-package goto-last-change
+    :ensure t
+    :bind ("C-;" . goto-last-change))
+    ;; :hook (org-mode . goto-last-change))
+
+#+end_src
+
+** Input Buffer, Directory Search
+*** Ivy, Ivy-Rich, and Counsel
+Ivy displays vertical completions of input buffer.
+#+begin_src emacs-lisp
+  (use-package ivy
+    :delight ivy-mode
+    :config
+    (ivy-mode 1)
+    ;; remove ^ on the inputbuffer
+    (setq ivy-initial-inputs-alist nil))
+#+end_src
+
+*** Ivy-Rich
+Ivy-rich provides information to display in input buffer to counsel.
+#+begin_src emacs-lisp
+  (use-package ivy-rich
+    :after ivy
+    :init  
+    (ivy-rich-mode 1))
+#+end_src
+
+*** Ivy-prescient
+prescient.el provides some helpful behavior for sorting Ivy completion candidates based on how recently or frequently you select them. This can be especially helpful when using M-x to run commands that you don’t have bound to a key but still need to access occasionally.
+
+#+begin_src emacs-lisp
+  (use-package ivy-prescient
+    :after counsel
+    :custom
+    (ivy-prescient-enable-filtering nil)
+    :config
+    ;; Uncomment the following line to have sorting remembered across sessions!
+    (prescient-persist-mode 1)
+    (ivy-prescient-mode 1))
+#+end_src
+
+*** Counsel
+Counsel displays ivy-rich info along with suggestions in input buffer.
+- =M-o= allows access to help in input buffer.
+
+#+begin_src emacs-lisp
+  (use-package counsel
+    :bind (("M-x" . counsel-M-x)      ; displays ivy-rich info in minibuffer
+           ("C-x C-f" . counsel-find-file)
+           :map minibuffer-local-map
+           ("C-r" . 'counsel-minibuffer-history)
+           ))
+#+end_src
+
+** Help
+*** Helpful
+Better version of help. We remap normal help keys to Helpful's versions.
+#+begin_src emacs-lisp
+  (use-package helpful
+  :commands (helpful-callable helpful-variavle helpful-command helpful-key)
+    :custom
+    (counsel-describe-function-function #'helpful-callable)
+    (counsel-describe-variable-function #'helpful-variable)
+    :bind
+    ([remap describe-function] . counsel-describe-function)
+    ([remap describe-command] . helpful-command)
+    ([remap describe-variable] . counsel-describe-variable)
+    ([remap describe-key] . helpful-key))
+#+end_src
+
+*** Which-key
+#+begin_src emacs-lisp
+  (use-package which-key
+    :defer 0
+    :delight which-key-mode  
+    :config(which-key-mode)
+    (setq which-key-idle-delay 0.8))
+#+end_src
+
+** TODO Grammarly
+There looks to be several packages at the moment. Top two (as of 1/10/22) are installed here without proper hooks. 
+*** lsp-grammarly
+Gives warning on startup for login.   [[https://github.com/emacs-grammarly/lsp-grammarly][lsp-grammarly doc]]
+#+begin_src emacs-lisp  :tangle no
+  (use-package lsp-grammarly
+  :ensure t
+  :hook (text-mode . (lambda ()
+                       (require 'lsp-grammarly)
+                       (lsp))))  ; or lsp-deferred
+#+end_src
+
+*** flycheck-grammarly
+Works w/o being logged in.                         [[https://github.com/emacs-grammarly/flycheck-grammarly][flycheck-grammarly doc]]
+#+begin_src emacs-lisp  :tangle no
+  (use-package flycheck-grammarly
+  :config
+  (setq flycheck-grammarly-check-time 0.8)
+#+end_src
+
+** Keybindings
+#+begin_src emacs-lisp
+  (global-set-key (kbd "<escape>") 'keyboard-escape-quit)
+  (global-set-key (kbd "C-o") 'other-window)
+  (global-set-key (kbd "C-x C-b") 'buffer-menu) ;; open buffer menue in current buffer
+
+  ;; Make font bigger/smaller.
+  (global-set-key (kbd "C-=") 'text-scale-increase)
+  (global-set-key (kbd "C--") 'text-scale-decrease)
+  (global-set-key (kbd "C-0") 'text-scale-adjust)
+
+    ;; (global-unset-key (kbd "C-<SPC>"))
+    ;; (global-unset-key (kbd "C-m"))
+    ;; (global-set-key (kbd "C-m") 'set-mark-command)
+    ;; (global-set-key (kbd "C-<SPC>") 'other-window)
+    ;; (global-set-key (kbd "M-SPC") 'other-window)
+#+end_src
+
+*Future:* create my own keybindings as shown [[https://www.youtube.com/watch?v=xaZMwNELaJY][here]]. hydra ties related commands into short bindings with a common prefix.
+
+** Font size
+#+begin_src emacs-lisp
+(set-face-attribute 'default nil :height 110) ;; needed on laptop
+#+end_src
+
 * Development
 ** TODO Flyspell comments
 Does not work well at the moment.
@@ -673,22 +920,42 @@ More to do at [[https://youtu.be/PMWwM8QJAtU][here]]: dired-open
 - "(" toggle file info
 - M-x du  shows the size of the files in the buffer (toggle for human readable)
 #+begin_src emacs-lisp
-   (use-package dired
-     :ensure nil
-     :commands dired
-     :config (setq dired-listing-switches "-agho --group-directories-first" )
-     (define-key dired-mode-map (kbd "C-o") 'other-window))
+  (use-package dired
+    :ensure nil
+    :commands dired
+    :config (setq dired-listing-switches "-agho --group-directories-first" )
+    (define-key dired-mode-map (kbd "C-o") 'other-window))
 
-  ;; (with-eval-after-load "dired"
-  ;;   (define-key dired-mode-map (kbd "C-o") 'other-window))
+  ;; nice icons in dired
+  (use-package treemacs-icons-dired
+    :after dired
+    :config (treemacs-icons-dired-mode) )
 
-   (use-package treemacs-icons-dired
-     :after dired
-     :config (treemacs-icons-dired-mode) )
+  ;; janky mode which lists the recursive size of each foler/item in dired.
+  (use-package dired-du
+    :commands du)
 
-  ;A rather janky mode which lists the recursive size of each foler/item in dired.
-   (use-package dired-du
-     :commands du)
+  ;; use a single dired session
+  (use-package dired-single)
+
+  (defun my-dired-init ()
+    "Bunch of stuff to run for dired, either immediately or when it's
+           loaded."
+    ;; <add other stuff here>
+    (define-key dired-mode-map [remap dired-find-file]
+                'dired-single-buffer)
+    (define-key dired-mode-map [remap dired-mouse-find-file-other-window]
+                'dired-single-buffer-mouse)
+    (define-key dired-mode-map [remap dired-up-directory]
+                'dired-single-up-directory))
+
+  ;; if dired's already loaded, then the keymap will be bound
+  (if (boundp 'dired-mode-map)
+      ;; we're good to go; just add our bindings
+      (my-dired-init)
+    ;; it's not loaded yet, so add our bindings to the load-hook
+    (add-hook 'dired-load-hook 'my-dired-init))
+
 #+end_src
 
 #+RESULTS:
